[gd_scene load_steps=15 format=3 uid="uid://bj4sm1n35gcij"]

[ext_resource type="Script" path="res://Scripts/Apps/Pot/window_pot.gd" id="1_mi2a3"]
[ext_resource type="PackedScene" uid="uid://daxbag8xh0v2q" path="res://Scenes/window.tscn" id="2_d2kgx"]
[ext_resource type="Texture2D" uid="uid://b33qu6cdajsyu" path="res://Assets/Sprites/Apps/Pot/pot_empty.png" id="3_mvtqa"]
[ext_resource type="Texture2D" uid="uid://bkhaq3bnaq1q3" path="res://Assets/Sprites/Apps/Pot/pot_has_seed.png" id="4_6rm0o"]
[ext_resource type="Texture2D" uid="uid://b1vgl7u44idh2" path="res://Assets/Sprites/Apps/Pot/pot_grown.png" id="5_xj22v"]
[ext_resource type="Texture2D" uid="uid://mt371jlgp5eo" path="res://Assets/Sprites/Apps/Pot/pot_dead.png" id="6_4dw6u"]
[ext_resource type="Script" path="res://Scripts/UI/progress_bar_horizontal.gd" id="7_rcf7r"]
[ext_resource type="Script" path="res://Scripts/UI/bubble.gd" id="8_lie4l"]
[ext_resource type="Texture2D" uid="uid://c3bi0k2goi0ql" path="res://Assets/Sprites/Apps/Pot/water_drop.png" id="9_1l86b"]
[ext_resource type="Texture2D" uid="uid://bvh06akk7hyxv" path="res://Assets/Sprites/Apps/Pot/pot_mini_grown.png" id="10_igefk"]
[ext_resource type="Script" path="res://Scripts/UI/Window/mini_icon.gd" id="10_igf1o"]
[ext_resource type="Texture2D" uid="uid://o3q2jtwg0wj7" path="res://Assets/Sprites/Apps/Pot/pot_mini_dead.png" id="11_io5cc"]
[ext_resource type="Texture2D" uid="uid://cgkdnilge3uvo" path="res://Assets/Sprites/Apps/Pot/pot_mini_empty.png" id="12_3v7xk"]
[ext_resource type="Texture2D" uid="uid://w2v0c01cpqe7" path="res://Assets/Sprites/Apps/Pot/pot_mini_has_seed.png" id="13_hr2df"]

[node name="Window_Pot" type="Node2D"]
texture_filter = 1
script = ExtResource("1_mi2a3")

[node name="Window" parent="." instance=ExtResource("2_d2kgx")]
h = 180.0

[node name="Sprite_PotEmpty" type="Sprite2D" parent="Window"]
position = Vector2(60, 105)
scale = Vector2(2, 2)
texture = ExtResource("3_mvtqa")

[node name="Sprite_PotHasSeed" type="Sprite2D" parent="Window"]
visible = false
position = Vector2(60, 105)
scale = Vector2(2, 2)
texture = ExtResource("4_6rm0o")

[node name="Sprite_PotGrown" type="Sprite2D" parent="Window"]
visible = false
position = Vector2(60, 105)
scale = Vector2(2, 2)
texture = ExtResource("5_xj22v")

[node name="Sprite_PotDead" type="Sprite2D" parent="Window"]
visible = false
position = Vector2(60, 105)
scale = Vector2(2, 2)
texture = ExtResource("6_4dw6u")

[node name="ProgressBar" type="Node2D" parent="Window"]
visible = false
position = Vector2(10, 10)
script = ExtResource("7_rcf7r")
length = 100.0
color = Color(0.415686, 0.886275, 0.352941, 1)
fill_time_sec = 60.0
reverse_fill_time_sec = 5.0
init_paused = true
debug_fill_time_sec = 5.0
debug_reverse_fill_time_sec = 5.0

[node name="Bubble_NeedWater" type="Node2D" parent="Window"]
visible = false
position = Vector2(72, 32)
script = ExtResource("8_lie4l")
init_texture = ExtResource("9_1l86b")
init_dir = 2

[node name="MiniIcon" type="Node2D" parent="."]
position = Vector2(-70, -70)
script = ExtResource("10_igf1o")

[node name="Sprite_PotEmpty" type="Sprite2D" parent="MiniIcon"]
position = Vector2(-21, -78)
scale = Vector2(2, 2)
texture = ExtResource("12_3v7xk")
centered = false

[node name="Sprite_PotHasSeed" type="Sprite2D" parent="MiniIcon"]
visible = false
position = Vector2(-21, -78)
scale = Vector2(2, 2)
texture = ExtResource("13_hr2df")
centered = false

[node name="Sprite_PotGrown" type="Sprite2D" parent="MiniIcon"]
visible = false
position = Vector2(-21, -42)
scale = Vector2(2, 2)
texture = ExtResource("10_igefk")
centered = false
offset = Vector2(0, -18)

[node name="Sprite_PotDead" type="Sprite2D" parent="MiniIcon"]
visible = false
position = Vector2(-21, -78)
scale = Vector2(2, 2)
texture = ExtResource("11_io5cc")
centered = false
